`Updated package-lock.json and dependencies`

--- a/public/payment.html
+++ b/public/payment.html
@@ -47,15 +47,15 @@
     <div class="main">
       <header class="topbar">
         <div class="topbar-inner">
-<<<<<<< HEAD
+<!-- Conflict marker removed: HEAD -->
           <button id="sidebarToggle" class="btn-icon" onclick="toggleSidebar()">☰</button>
           <div class="search">
             <span class="hint">🔎 Tìm kiếm</span>
             <input id="searchInput" placeholder="Nhập từ khóa..." onkeyup="handleSearch(event)" />
           </div>
 
-=======
->>>>>>> 1e0c40a5a44adf1ef48a6096de83509bd9eeb841
+<!-- Conflict marker removed: ======= -->
+<!-- Conflict marker removed: >>>>>>> -->
           <div class="topbar-right">
             <div class="user-chip">
               <img id="headerAvatar" src="" alt="Avatar" class="header-avatar" style="display: none;">
